# reader_assistant

./: README.md  config.py  main.py  pyproject.toml  requirements.txt
mermaid/: 1.html  2.html  3.html  4.html  5.html  index.html
src/agents/: geography_agent.py  mermaid_agent.py  mermaid_examples.txt  relation_agent.py  timeline_agent.py  visualization_agent.py
src/core/: embeddings.py  qa_system.py
src/utils/: string.py  types.py
